--- a/styles/project.css
+++ b/styles/project.css
@@ -8,6 +8,11 @@
 /* HTML Selectors */
 body {
     font-family: 'Roboto', Helvetica, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background-color: #5372f0;
 }
 
 nav {
@@ -166,6 +171,63 @@ margin: 35px 0;
     text-align: center;
     word-break: break-all;
 }
+.content .author{
+    display: flex;
+    font-size: 18px;
+    font-style: italic;
+    margin-top: 20px;
+    justify-content: flex-end;
+}
+.author span:first-child{
+    margin: -7px 5px 0 0;
+    font-family: monospace;
+}
+.wrapper .buttons{
+    border-top: 1px solid #ccc;
+}
+.buttons .features{
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+    justify-content: space-between;
+}
+.features ul{
+    display: flex;
+}
+.features ul li{
+    list-style: none;
+    margin: 0 5px;
+    height: 47px;
+    width: 47px;
+    display: flex;
+    cursor: pointer;
+    color: #5372F0;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    border: 2px solid #5372f0;
+}
+.features ul li:hover{
+    color: #fff;
+    background: #5372f0;
+}
+
+.features button{
+    border: none;
+    outline: none;
+    color: #fff;
+    cursor: pointer;
+    font-style: 16px;
+    padding: 13px 22px;
+    border-radius: 30px;
+    background: #5372F0;
+    align-items: center;
+}
+button.loading{
+    opacity: 0.7;
+    pointer-events: none;
+}
+
 /* Media Queries */
 @media only screen and (min-width: 32.5em) {
     nav ul {
